Fix bug where menu overlapped other links

--- a/client/components/css/human.css
+++ b/client/components/css/human.css
@@ -17,7 +17,7 @@
 	position: fixed;
 	width: 100%;
    z-index:6; 
-   height: 200px;
+   height: 150px;
    padding-top: 20px;
 	top: 0px;
 	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.8), rgba(0,0,0,0.6), rgba(0,0,0,0.3), rgba(0,0,0,0));
@@ -36,7 +36,7 @@
 
 .center {
 	margin-bottom: 50px;
-	top: 250px;
+	top: 200px;
    left: 10px;
    right: 10px;
 	height: auto;
@@ -79,6 +79,10 @@
 
 @media screen and (min-width: 500px){
 	.center {
-		margin-bottom: 50px;
+		top: 250px;
+        margin-bottom: 50px;
 	}
+    .head {
+        height: 200px;
+    }
 }
