--- a/public/bundle.css
+++ b/public/bundle.css
@@ -11,10 +11,10 @@
 ._app_pwz8t_11 {
 	height: auto;
 }
-._headHuman_10gsa_1 {
+._headHuman_1wicr_1 {
 	text-align: left;
 }
-._logo_10gsa_4{
+._logo_1wicr_4{
 	z-index: 7;
 	width: 15%;
 	top: 5px;
@@ -22,42 +22,42 @@
 	position: fixed;
 	opacity: 1;
 }
-._logo_10gsa_4{
+._logo_1wicr_4{
 	left: 20px;
 	transition: 1s ease-in-out;
 }
-._head_10gsa_1 { 
+._head_1wicr_1 { 
 	position: fixed;
 	width: 100%;
    z-index:6; 
-   height: 200px;
+   height: 150px;
    padding-top: 20px;
 	top: 0px;
 	background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.8), rgba(0,0,0,0.6), rgba(0,0,0,0.3), rgba(0,0,0,0));
 	-webkit-animation-delay: 0s;
     animation-delay: 0s;
-	-webkit-animation-name: _fadeIn_10gsa_1;
+	-webkit-animation-name: _fadeIn_1wicr_1;
     -webkit-animation-duration: 2s;
- 	animation-name: _fadeIn_10gsa_1;
+ 	animation-name: _fadeIn_1wicr_1;
   	animation-duration: 2s;
   	opacity: 1;
 }
-._head_10gsa_1 h1 {
+._head_1wicr_1 h1 {
 	margin-left: 170px;
 	max-width: 300px;
 }
 
-._center_10gsa_37 {
+._center_1wicr_37 {
 	margin-bottom: 50px;
-	top: 250px;
+	top: 200px;
    left: 10px;
    right: 10px;
 	height: auto;
 	padding: none;
 	position: absolute;
-	-webkit-animation-name: _fadeIn_10gsa_1;
+	-webkit-animation-name: _fadeIn_1wicr_1;
     -webkit-animation-duration: 1s;
- 	animation-name: _fadeIn_10gsa_1;
+ 	animation-name: _fadeIn_1wicr_1;
   	animation-duration: 1s;
   	visibility: visible;
   	opacity: 1;
@@ -65,7 +65,7 @@
    justify-content: center;
 }
 
-@-webkit-keyframes _fadeIn_10gsa_1 { 
+@-webkit-keyframes _fadeIn_1wicr_1 { 
   0% { opacity: 0; }
   20% { opacity: 0; }
   40% { opacity: 0.3; }
@@ -74,7 +74,7 @@
   100% { opacity: 1; }
 }
 
-@keyframes _fadeIn_10gsa_1 {
+@keyframes _fadeIn_1wicr_1 {
   0% { opacity: 0; }
   20% { opacity: 0; }
   40% { opacity: 0.3; }
@@ -83,7 +83,7 @@
   100% { opacity: 1; }
 }
 
-._hide_10gsa_73 {
+._hide_1wicr_73 {
 	opacity: 0;
 	/*visibility: hidden;*/
 	transition: all 0.2s;
@@ -91,32 +91,37 @@
 
 
 @media screen and (min-width: 500px){
-	._center_10gsa_37 {
-		margin-bottom: 50px;
+	._center_1wicr_37 {
+		top: 250px;
+        margin-bottom: 50px;
 	}
+    ._head_1wicr_1 {
+        height: 200px;
+    }
 }
-._hide_1th35_1 {
+._hide_z67op_1 {
   	visibility: hidden;
   	opacity: 0;
+
 }
 
 
-._fadeIn_1th35_7 {
+._fadeIn_z67op_8 {
    position: fixed;
     max-width: 900px;
    padding: 10px;
    display: flex;
    justify-content: flex-end;
    flex-flow: row wrap;
-	-webkit-animation-name: _fadeIn_1th35_7;
+	-webkit-animation-name: _fadeIn_z67op_8;
     -webkit-animation-duration: 1s;
- 	animation-name: _fadeIn_1th35_7;
+ 	animation-name: _fadeIn_z67op_8;
   	animation-duration: 1s;
 }
-._fadeIn_1th35_7 h2 {
+._fadeIn_z67op_8 h2 {
    padding-right: 50px;
 }
-._whoCol_1th35_22{
+._whoCol_z67op_23{
 	text-align: left;
 	width: 30%;
 	max-width: 230px;
@@ -125,24 +130,24 @@
    margin-right: 40px;
 	min-width: 200px;
 }
-._profileImg_1th35_31 {
+._profileImg_z67op_32 {
 	height: 100px;
 	width: 100px;
 	opacity: 0.5;
 	background: #e0ffc7 url(./img/cam.jpg) no-repeat;
 	background-size: cover;
-	-webkit-animation-name: _fadeIn_1th35_7;
+	-webkit-animation-name: _fadeIn_z67op_8;
     -webkit-animation-duration: 1s;
- 	animation-name: _fadeIn_1th35_7;
+ 	animation-name: _fadeIn_z67op_8;
   	animation-duration: 1s;
 }
-._profileImg_1th35_31._mobile_1th35_42 {
+._profileImg_z67op_32._mobile_z67op_43 {
 	top: 0px;
 	position: absolute;
 	margin: -40px -50px -50px -20px;
 	z-index: 0;
 }
-._socialButtons_1th35_48 {
+._socialButtons_z67op_49 {
 	vertical-align: bottom;
 	color: white;
 	text-align: left;
@@ -150,41 +155,41 @@
 	height: 100px;
 	text-align: center;
 }
-._socialButtons_1th35_48 a {
+._socialButtons_z67op_49 a {
 	display: inline-block;
 	opacity: 0.5;
 	margin: 10px 10px 0px;
 }
-._socialButtons_1th35_48 a svg {
+._socialButtons_z67op_49 a svg {
    height: 20px;
    width: 20px;
 }
-._socialButtons_1th35_48 a:hover {
+._socialButtons_z67op_49 a:hover {
 	opacity: 1;
 	-ms-transition: all 0.2s ease-out; 
 	transition: all 0.2s ease-out;
 }
 
-._desktop_1th35_71 {
+._desktop_z67op_72 {
 	display: none;
 }
 
 @media screen and (min-width: 367px){
-	._profileImg_1th35_31._mobile_1th35_42 {
+	._profileImg_z67op_32._mobile_z67op_43 {
 		margin: 70px -50px -50px -150px;
 	}
 }
 @media screen and (min-width: 700px){
-	._fadeIn_1th35_7 {
+	._fadeIn_z67op_8 {
       		justify-content: center
    	}
-	._mobile_1th35_42{
+	._mobile_z67op_43{
 		display: none;
 	}
-	._desktop_1th35_71 {
+	._desktop_z67op_72 {
 		display: flex;
 	}
-	._profileImg_1th35_31._desktop_1th35_71 {
+	._profileImg_z67op_32._desktop_z67op_72 {
 		height: 120px;
 		width: 120px;
 		position: relative;
@@ -642,30 +647,31 @@
       padding-top: 100px;
    }
 }
-._hide_or4pj_1 {
+._hide_dkrub_1 {
   position: absolute;
   opacity: 0;
   visibility: hidden;
 }
 
-._nav_or4pj_7 {
+._nav_dkrub_7 {
 	width: 100%;
-	text-align: center;
-	-webkit-animation-name: _fadeIn_or4pj_1;
+	max-height: 50px;
+    text-align: center;
+	-webkit-animation-name: _fadeIn_dkrub_1;
     -webkit-animation-duration: 1s;
- 	animation-name: _fadeIn_or4pj_1;
+ 	animation-name: _fadeIn_dkrub_1;
   	animation-duration: 1s;
   	visibility: visible;
   	opacity: 1;
 }
 
-._nav_or4pj_7 a {
+._nav_dkrub_7 a {
 	min-width: 100px;
 	margin: 20px;
 	padding: 10px;
 }
 
-@-webkit-keyframes _fadeIn_or4pj_1 { 
+@-webkit-keyframes _fadeIn_dkrub_1 { 
   0% { opacity: 0; }
   20% { opacity: 0; }
   40% { opacity: 0.3; }
@@ -674,7 +680,7 @@
   100% { opacity: 1; }
 }
 
-@keyframes _fadeIn_or4pj_1 {
+@keyframes _fadeIn_dkrub_1 {
   0% { opacity: 0; }
   20% { opacity: 0; }
   40% { opacity: 0.3; }
@@ -684,7 +690,7 @@
 }
 
 @media screen and (min-width:   730px) {
-  ._nav_or4pj_7 {
+  ._nav_dkrub_7 {
     width: 300px;
     position: absolute;
     right: 40px;
@@ -764,27 +770,6 @@
     opacity: 1;
 }
 
-._container_cq5ee_1 {
-    height: 100%;
-    width: 100%;
-    height: 20px;
-    display: flex;
-    padding: 0px 5px;
-}
-._container_cq5ee_1 p {
-    margin: 2px 2px 2px 0px;
-    color: #000;
-}
-._container_cq5ee_1 a {
-    height: 1.4em;
-    padding: 0px 5px;
-    margin: 0px 5px;
-    background: #000;
-    transition: filter 0.2s ease-out;
-}
-._container_cq5ee_1 a:hover {
-    filter: invert(100%)
-}
 ._container_km8gx_1 {
     padding-top: 10px;
     text-align: left;
@@ -816,6 +801,27 @@
     margin: 2px;
     background: #000;
     transition: filter 0.2s ease-out;
+}
+._container_cq5ee_1 {
+    height: 100%;
+    width: 100%;
+    height: 20px;
+    display: flex;
+    padding: 0px 5px;
+}
+._container_cq5ee_1 p {
+    margin: 2px 2px 2px 0px;
+    color: #000;
+}
+._container_cq5ee_1 a {
+    height: 1.4em;
+    padding: 0px 5px;
+    margin: 0px 5px;
+    background: #000;
+    transition: filter 0.2s ease-out;
+}
+._container_cq5ee_1 a:hover {
+    filter: invert(100%)
 }
 ._container_eyton_1 {
      background: linear-gradient(
